--- a/src/output.css
+++ b/src/output.css
@@ -708,6 +708,10 @@ video {
   min-height: 190px;
 }
 
+.min-h-\[460px\] {
+  min-height: 460px;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -903,6 +907,16 @@ video {
 .bg-zinc-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-75 {
